# e2designer

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  AppImageBuilder.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  appimage.sh  bintray.py  color_widgets.pri  colorlistbox.cpp  colorlistbox.h  colorlistwindow.cpp  colorlistwindow.h  colorlistwindow.hpp  colorlistwindow.ui  coordinate.cpp  coordinate.hpp  dimension.cpp  dimension.hpp  docker-compose.yml  docker-push.sh  e2designer.pro  fontlistwindow.cpp  fontlistwindow.hpp  gitlab-runner-exec.sh  io.github.technic.e2designer.yaml  io.github.technic93.e2designer.yaml  listbox.cpp  listbox.h  listbox.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  (+7 more)
.github/workflows/: build.yml  flatpak.yml  test.yml
AppImageUpdaterBridge/: AppImageUpdaterBridge
Qt-Color-Widgets/: color_widgets.pri
Qt-Color-Widgets/gallery/: CMakeLists.txt  README.md  screenshot.cpp
adapter/: attritemfactory.cpp  attritemfactory.h  attritemfactory.hpp
app/: app.pro  main.cpp
attr/: attrgroupitem.cpp  attrgroupitem.hpp  attritem.cpp  attritem.h  attritem.hpp  coloritem.cpp  coloritem.hpp  enumitem.cpp  enumitem.hpp  fontitem.cpp  fontitem.h  fontitem.hpp  integeritem.cpp  integeritem.hpp  pixmapitem.cpp  pixmapitem.hpp  positionitem.cpp  positionitem.hpp  sizeitem.cpp  sizeitem.hpp  textitem.cpp  textitem.hpp  variantitem.cpp  variantitem.h  variantitem.hpp
base/: flagsetter.cpp  singleton.cpp  singleton.h  tree.hpp  uniqueid.cpp  uniqueid.h
color_widgets_designer_plugin/: CMakeLists.txt
commands/: attrcommand.cpp  attrcommand.hpp
docker/: Dockerfile
docker/flatpak/: Dockerfile  yaml2json.py
docker/qt/: Dockerfile
editor/: codeeditor.cpp  codeeditor.h  xmlhighlighter.cpp  xmlhighlighter.hpp
git-version/: git-version.cmake  git-version.pri  git-version.pro  gitversion.hpp  gitversion.hpp.in  main.cpp
include/QtColorWidgets/: color_preview.hpp  color_selector.hpp
misc/: e2designer.appdata.xml  e2designer.desktop
model/: borderset.cpp  borderset.h  borderset.hpp  colorsmodel.cpp  colorsmodel.h  colorsmodel.hpp  fontsmodel.cpp  fontsmodel.hpp  namedlist.cpp  namedlist.h  namedlist.hpp  propertiesmodel.cpp  propertiesmodel.h  propertiesmodel.hpp  screensmodel.cpp  screensmodel.hpp  windowstyle.cpp  windowstyle.h  windowstyle.hpp
repository/: attrcontainer.cpp  attrcontainer.h  pixmapstorage.cpp  pixmapstorage.h  skinrepository.cpp  skinrepository.h  skinrepository.hpp  videooutputrepository.cpp  videooutputrepository.h  videooutputrepository.hpp  widgetdata.cpp  widgetdata.hpp  xmlnode.cpp  xmlnode.hpp
scene/: backgroundpixmap.cpp  backgroundpixmap.hpp  borderview.cpp  borderview.hpp  foregroundwidget.cpp  foregroundwidget.h  recthandle.cpp  recthandle.hpp  rectselector.cpp  rectselector.h  rectselector.hpp  sceneview.cpp  sceneview.hpp  screenview.cpp  screenview.hpp  widgetview.cpp  widgetview.h  widgetview.hpp
src/: colorlistbox.cpp  colorlistbox.hpp  colorlistwindow.cpp  colorlistwindow.hpp  colorlistwindow.ui  customtreeview.hpp  data.qrc  dimension.hpp  fontlistwindow.cpp  fontlistwindow.hpp  fontlistwindow.ui  listbox.cpp  listbox.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  outputslistwindow.cpp  outputslistwindow.hpp  skindelegate.cpp  skindelegate.hpp  skinmaps.cpp  sources.xml  src.pri  src.pro  stable.hpp
src/QtColorWidgets/: color_dialog.cpp  color_utils.hpp  color_wheel.cpp  hue_slider.cpp
src/adapter/: attritemfactory.cpp  attritemfactory.hpp
src/attr/: attrgroupitem.hpp  attritem.cpp  attritem.hpp  coloritem.cpp  coloritem.hpp  enumitem.cpp  enumitem.hpp  fontitem.cpp  fontitem.hpp  integeritem.cpp  integeritem.hpp  pixmapitem.cpp  pixmapitem.hpp  positionitem.cpp  positionitem.hpp  sizeitem.cpp  sizeitem.hpp  textitem.cpp  textitem.hpp  variantitem.cpp  variantitem.hpp
src/base/: flagsetter.cpp  flagsetter.hpp  meta.hpp  misc.hpp  singleton.hpp  tree.hpp  typelist.hpp  uniqueid.cpp  uniqueid.hpp  xmlstreamwriter.cpp  xmlstreamwriter.hpp
src/commands/: attrcommand.cpp  attrcommand.hpp
src/editor/: codeeditor.cpp  codeeditor.hpp  xmlhighlighter.cpp  xmlhighlighter.hpp
src/model/: borderset.cpp  borderset.hpp  bordersmodel.cpp  bordersmodel.hpp  colorsmodel.cpp  colorsmodel.hpp  fontsmodel.cpp  fontsmodel.hpp  movablelistmodel.cpp  movablelistmodel.hpp  namedlist.hpp  outputsmodel.cpp  outputsmodel.hpp  propertiesmodel.cpp  propertiesmodel.hpp  propertytree.cpp  propertytree.hpp  screensmodel.cpp  screensmodel.hpp  windowstyle.cpp  windowstyle.hpp
src/parser/: parser.cpp  parser.hpp  parser_impl.hpp
src/repository/: attrcontainer.cpp  attrcontainer.hpp  pixmapstorage.cpp  pixmapstorage.hpp  skinrepository.cpp  skinrepository.hpp  videooutputrepository.cpp  videooutputrepository.hpp  widgetdata.cpp  widgetdata.hpp  xmlnode.cpp  xmlnode.hpp
src/scene/: backgroundpixmap.cpp  backgroundpixmap.hpp  borderview.cpp  borderview.hpp  entrypainter.cpp  entrypainter.hpp  foregroundwidget.cpp  foregroundwidget.hpp  recthandle.cpp  recthandle.hpp  rectselector.cpp  rectselector.hpp  sceneview.cpp  sceneview.hpp  screenview.cpp  screenview.hpp  widgetview.cpp  widgetview.hpp
src/skin/: attrcontainer.hpp  attributes.cpp  attributes.hpp  borders.cpp  borders.hpp  colorattr.cpp  colorattr.hpp  converter.cpp  converter.hpp  enumattr.cpp  enumattr.hpp  enums.hpp  fontattr.cpp  fontattr.hpp  (+11 more)
tests/: CMakeLists.txt  testcase.cpp  testcase.hpp  tests.pri  tests.pro  tst_attr.cpp  tst_container.cpp  tst_main.cpp
tests/attr/: attr.pro  tst_testattr.cpp
tests/container/: container.pro  tst_testcontainer.cpp
tests/converter/: converter.pro  tst_testconverter.cpp
tests/core/: core.pro  tst_testcore.cpp
tests/misc/: misc.pro  tst_misctests.cpp  tst_testmisc.cpp
tests/models/: autotests.cpp  autotests.hpp  models.pro  tst_screensmodel.cpp
tests/parser/: tst_parser.cpp
tests/scene/: scene.pro  skin.xml  tst_testscene.cpp
tests/typelist/: tst_typelist.cpp  typelist.pro
tests/widget/: tst_testwidget.cpp  widget.pro  widget.xml
(+17 files in other folders)
