macro(add_qtest testname testsrc)
    set(test_${testname}_SRCS ${testsrc})
    add_executable(test_${testname} ${test_${testname}_SRCS})
    target_link_libraries(test_${testname} Qt5::Test srclib)
    add_test(test_${testname} test_${testname})
endmacro(add_qtest)

add_qtest(attr attr/tst_testattr.cpp)
#add_qtest(container container/tst_testcontainer.cpp)
add_qtest(converter converter/tst_testconverter.cpp)
add_qtest(core core/tst_testcore.cpp)
add_qtest(misc misc/tst_testmisc.cpp)
add_qtest(models models/tst_screensmodel.cpp)
add_qtest(scene scene/tst_testscene.cpp)
add_qtest(typelist typelist/tst_typelist.cpp)
add_qtest(widget widget/tst_testwidget.cpp)
